[project]
name = "langchain2"
version = "0.1.0"
description = "Emotionally and logically adaptive chatbot using LangChain, LangGraph, and Anthropic Claude."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
    "langchain[anthropic]",
    "langgraph>=0.4.7",
    "pydantic>=2.11.5",
    "typing-extensions>=4.13.0",
    "orjson>=3.10.0",
    "httpx>=0.28.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0"
]
