[project]
name = "langchain2"
version = "0.1.0"
description = "Emotionally and logically adaptive chatbot using LangChain, LangGraph, and Anthropic Claude."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.1.0",
    "ipykernel==6.29.5",
    "langchain[anthropic]==0.3.25",
    "langgraph==0.4.7",
    "pydantic==2.11.5",
    "typing-extensions==4.13.2",
    "orjson==3.10.18",
    "httpx==0.28.1",
    "requests==2.32.3",
    "pyyaml==6.0.2",
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "annotated-types==0.7.0",
    "anthropic==0.52.1",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "distro==1.9.0",
    "executing==2.2.0",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.10",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "langchain-anthropic==0.3.14",
    "langchain-core==0.3.63",
    "langchain-text-splitters==0.3.8",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.2.2",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.43",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pyzmq==26.4.0",
    "requests-toolbelt==1.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "stack-data==0.6.3",
    "tenacity==9.1.2",
    "tornado==6.5.1",
    "traitlets==5.14.3",
    "typing-inspection==0.4.1",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "xxhash==3.5.0",
    "zstandard==0.23.0",
]
